--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "br-buttons",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "homepage": "https://github.com/bed-rock/br-selectbox",
   "authors": [
     "cbfranca <cleidsonbf@gmail.com>",
@@ -24,7 +24,7 @@
     "tests"
   ],
   "dependencies": {
-    "bedrock-base": "*",
-    "br-icons": "*"
+    "bedrock-base": "~1.0.0",
+    "br-icons": "~1.0.0"
   }
 }
